--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~12.2.0",
     "bootstrap": "^5.1.3",
     "rxjs": "~6.6.0",
+    "swiper": "6.8.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
