--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,19 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+	"paths": {
+		"@app/*": ["src/app/*"],
+ 		 "@assets/*": ["src/assets/*"],
+		"@environments/*": ["src/environments/*"],
+		"@language/*": ["src/environments/language/*"],
+		"@services/*": ["src/app/services/*"],
+		"@modules/*": ["src/app/modules/*"],
+		"@layout/*": ["src/app/layout/*"],
+		"@interfaces/*": ["src/app/interfaces/*"],
+		"@helpers/*": ["src/app/helpers/*"],
+		"@ui/*": ["src/app/ui/*"]
+	},
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
